src/objects/filegen__Entry_Detail_Record__c.object
<CustomObject>
    <fields>
        <fullName>filegen__Addenda_Record_Indicator__c</fullName>
        <label>Addenda  Record  Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Amount__c</fullName>
        <label>Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Check_Digit__c</fullName>
        <label>Check Digit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Discretionary_Data__c</fullName>
        <label>Discretionary  Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Individual_Identification_Number__c</fullName>
        <label>Individual  Identification  Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Individual_Name__c</fullName>
        <label>Individual  Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__RDFI_Account_Number__c</fullName>
        <label>RDFI Account  Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__RDFI_Identification__c</fullName>
        <label>RDFI  Identification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Record_Type__c</fullName>
        <label>Record Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Trace_Number__c</fullName>
        <label>Trace Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Transaction_Code__c</fullName>
        <label>Transaction  Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Entry Detail Record</label>
    <nameField>
        <displayFormat>EDR-{0000000000}</displayFormat>
        <label>Entry Detail Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entry Detail Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>